firebase db입력,google지도 페이지 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     /*googleFirebase-auth*/
     compile 'com.google.firebase:firebase-auth:11.2.0'
     compile 'com.google.android.gms:play-services-auth:11.2.0'
+    compile 'com.google.firebase:firebase-database:11.2.0'
+    //googleMap
+    compile 'com.google.android.gms:play-services-maps:11.2.0'
+
 
 }
 allprojects {
