--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,12 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".EmailJoinActivity"
-            android:label="Email Login" />
+            android:label="Email Login"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".SelectActivity"
-            android:label="Email Login" />
+            android:label="Email Login"
+            android:theme="@style/AppTheme" />
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -52,8 +54,11 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".UserInfoActivity"/>
+            android:label="@string/title_activity_maps"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".UserInfoActivity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
