--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,10 +57,10 @@
             android:name=".FeedingRoomActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".addDonorActivitiy"
+            android:name=".AddDonorActivitiy"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".addBeneficiaryActivity"
+            android:name=".AddBeneficiaryActivity"
             android:theme="@style/AppTheme" />
     </application>
 
