--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     //faceBook Login
     compile 'com.facebook.android:facebook-login:[4,5)'
 
+    //PhotoPicker
+    compile 'me.iwf.photopicker:PhotoPicker:0.9.10@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.bumptech.glide:glide:4.1.1'
 
 }
 allprojects {
